@@ -8,6 +8,7 @@ doc/
 debian/.debhelper/*
 debian/debhelper-build-stamp
 debian/oidc-agent/
+debian/oidc-agent-server/
 debian/oidc-agent-prompt/
 debian/liboidc-agent?/
 debian/liboidc-agent-dev/
