@@ -24,6 +24,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
                 libcurl3 (>= 7.35) | libcurl4 (>= 7.35),
                 libmicrohttpd10 (>= 0.9.33) | libmicrohttpd12 (>=0.9.33),
+                libsodium23 (>= 1.0.14),
                 libseccomp2 (>=2.1.1),
                 libsecret-1-0 (>= 0.18.4),
                 liboidc-agent4 (= ${binary:Version})
@@ -41,7 +42,8 @@ Description: Commandline tool for obtaining OpenID Connect Access tokens on the 
 Package: liboidc-agent4
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends},
+                libsodium23 (>= 1.0.14)
 Recommends: oidc-agent (= ${binary:Version})
 Description: oidc-agent library
  oidc-agent is a commandline tool for obtaining OpenID Connect Access tokens on
@@ -61,6 +63,18 @@ Description: oidc-agent library development files
  This package provides the development files (static library and headers)
  required for building applications with liboidc-agent, a library for
  communicating with oidc-agent.
+
+Package: oidc-agent-server
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends},
+                libcurl3 (>= 7.35) | libcurl4 (>= 7.35),
+                libmicrohttpd10 (>= 0.9.33) | libmicrohttpd12 (>=0.9.33),
+                libsodium23 (>= 1.0.14)
+Description: central oidc-agent version
+ oidc-agent-server acts a central oidc-agent.
+ .
+ This package provides the oidc-agent-server that can be used as a central
+ server agent and client can connect to it through TCP.
 
 Package: oidc-agent-prompt
 Architecture: all
