@@ -9,4 +9,4 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 override_dh_auto_build:
 	$(MAKE) -j1
 override_dh_auto_install:
-	$(MAKE) BIN_PATH=$$(pwd)/debian/oidc-agent/usr PROMPT_BIN_PATH=$$(pwd)/debian/oidc-agent-prompt/usr BIN_AFTER_INST_PATH=/usr MAN_PATH=$$(pwd)/debian/oidc-agent/usr/share/man PROMPT_MAN_PATH=$$(pwd)/debian/oidc-agent-prompt/usr/share/man CONFIG_PATH=$$(pwd)/debian/oidc-agent/etc BASH_COMPLETION_PATH=$$(pwd)/debian/oidc-agent/usr/share/bash-completion/completions LIB_PATH=$$(pwd)/debian/liboidc-agent4/usr/lib/x86_64-linux-gnu LIBDEV_PATH=$$(pwd)/debian/liboidc-agent-dev/usr/lib/x86_64-linux-gnu INCLUDE_PATH=$$(pwd)/debian/liboidc-agent-dev/usr/include/x86_64-linux-gnu DESKTOP_APPLICATION_PATH=$$(pwd)/debian/oidc-agent/usr/share/applications XSESSION_PATH=$$(pwd)/debian/oidc-agent/etc/X11 install install_lib install_lib-dev
+	$(MAKE) BIN_PATH=$$(pwd)/debian/oidc-agent/usr PROMPT_BIN_PATH=$$(pwd)/debian/oidc-agent-prompt/usr AGENTSERVER_BIN_PATH=$$(pwd)/debian/oidc-agent-server/usr BIN_AFTER_INST_PATH=/usr MAN_PATH=$$(pwd)/debian/oidc-agent/usr/share/man PROMPT_MAN_PATH=$$(pwd)/debian/oidc-agent-prompt/usr/share/man AGENTSERVER_MAN_PATH=$$(pwd)/debian/oidc-agent-server/usr/share/man CONFIG_PATH=$$(pwd)/debian/oidc-agent/etc BASH_COMPLETION_PATH=$$(pwd)/debian/oidc-agent/usr/share/bash-completion/completions LIB_PATH=$$(pwd)/debian/liboidc-agent4/usr/lib/x86_64-linux-gnu LIBDEV_PATH=$$(pwd)/debian/liboidc-agent-dev/usr/lib/x86_64-linux-gnu INCLUDE_PATH=$$(pwd)/debian/liboidc-agent-dev/usr/include/x86_64-linux-gnu DESKTOP_APPLICATION_PATH=$$(pwd)/debian/oidc-agent/usr/share/applications XSESSION_PATH=$$(pwd)/debian/oidc-agent/etc/X11 install install_lib install_lib-dev
